# My_mini_world

./: CMakeLists.txt  Config.cpp  General_includer.cpp  Includer.cpp  SFML_documentation.cpp  main.cpp
Components/: Camera.cpp  Camera.h  Inventory.cpp  Inventory.h  Inventory_cell.cpp  Inventory_cell.h  Player.cpp  Player.h  Scene.cpp  Scene.h  World_Cell.cpp  World_Cell.h
Configs/: Config.cpp  Config.h  Data_Config.h  Texture_Config.cpp  Texture_Config.h
Scripts/: Can_go_to_cell.cpp  Can_go_to_cell.h  Draw.cpp  Event_logic_controller.cpp  Event_logic_controller.h  get_cell_by_cord.cpp  get_cell_by_cord.h
content/graphic/: afa3.pdn
